--- a/eastes_android-developer/yunqudao/app/build.gradle
+++ b/eastes_android-developer/yunqudao/app/build.gradle
@@ -1,76 +1,75 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 26
-  defaultConfig {
-    applicationId "com.ccsoft.yunqudao"
-    minSdkVersion 20
-    targetSdkVersion 26
-    versionCode 1
-    versionName "1.0.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    compileSdkVersion 26
+    defaultConfig {
+        applicationId "com.ccsoft.yunqudao"
+        minSdkVersion 20
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-  }
-  sourceSets {
-    main {
-      res.srcDirs = ['src/main/res/layout/customers',
-                     'src/main/res/layout/house',
-                     'src/main/res/layout/me',
-                     'src/main/res/layout/message',
-                     'src/main/res/layout/work',
-                     'src/main/res']
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
-  }
-  compileOptions {
-    targetCompatibility 1.8
-    sourceCompatibility 1.8
-  }
+    sourceSets {
+        main {
+            res.srcDirs = ['src/main/res/layout/customers',
+                           'src/main/res/layout/house',
+                           'src/main/res/layout/me',
+                           'src/main/res/layout/message',
+                           'src/main/res/layout/work',
+                           'src/main/res']
+        }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
-  implementation fileTree(include: ['*.jar'], dir: 'libs')
-  implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-  implementation 'com.android.support:support-v4:26.0.0-beta1'
-  implementation 'com.android.support:design:26.1.0'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:0.5'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-  implementation(name: 'bottom-navigation-bar-2.0.4', ext: 'aar')
-  implementation 'org.xutils:xutils:3.5.0'
-  implementation 'com.android.support:recyclerview-v7:26.0.0-beta1'
-  implementation 'com.github.bumptech.glide:glide:3.8.0'
-  implementation 'com.jakewharton:butterknife:8.8.1'
-  implementation 'com.google.code.gson:gson:2.6.2'
-  compile 'com.squareup.okhttp3:okhttp:3.4.1'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
-  compile 'org.greenrobot:eventbus:3.1.1'
-  compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
-  //rxjava相关
-  compile 'io.reactivex:rxjava:1.3.0'
-  compile 'io.reactivex:rxandroid:1.2.1'
-
-  //retrofit相关
-  compile 'com.squareup.retrofit2:retrofit:2.1.0'
-  compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-  compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-  compile 'com.github.dongjunkun:DropDownMenu:1.0.4'
-  compile 'com.github.razerdp:BasePopup:1.9.4'
-  compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
-  compile 'com.lzy.net:okhttputils:+'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-  implementation files('libs/open_sdk_r5990_lite.jar')
-  implementation files('libs/umeng-sharetool-6.9.1.jar')
-  implementation files('libs/umeng-share-core-6.9.1.jar')
-  implementation files('libs/umeng-debug-1.0.0.jar')
-  implementation files('libs/umeng-common-1.5.1.jar')
-  compile 'com.facebook.fresco:fresco:0.12.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.0.0-beta1'
+    implementation 'com.android.support:design:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation(name: 'bottom-navigation-bar-2.0.4', ext: 'aar')
+    implementation 'org.xutils:xutils:3.5.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.0-beta1'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+    //rxjava相关
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    //retrofit相关
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.github.dongjunkun:DropDownMenu:1.0.4'
+    compile 'com.github.razerdp:BasePopup:1.9.4'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    compile 'com.lzy.net:okhttputils:+'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation files('libs/open_sdk_r5990_lite.jar')
+    implementation files('libs/umeng-sharetool-6.9.1.jar')
+    implementation files('libs/umeng-share-core-6.9.1.jar')
+    implementation files('libs/umeng-debug-1.0.0.jar')
+    implementation files('libs/umeng-common-1.5.1.jar')
+    compile 'com.facebook.fresco:fresco:0.12.0'
 }
 repositories {
   flatDir {
