--- a/eastes_android-developer/yunqudao/app/build.gradle
+++ b/eastes_android-developer/yunqudao/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation files('libs/umeng-debug-1.0.0.jar')
     implementation files('libs/umeng-common-1.5.1.jar')
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.contrarywind:Android-PickerView:4.1.4'
+
 }
 repositories {
   flatDir {
