--- a/eastes_android-developer/yunqudao/app/build.gradle
+++ b/eastes_android-developer/yunqudao/app/build.gradle
@@ -31,7 +31,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
     buildToolsVersion '26.0.2'
+
+    sourceSets{
+        main{
+            jniLibs.srcDir 'libs'
+            //说明so的路径为该libs路径，关联所有地图SDK的so文件
+        }
+    }
 }
+
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -72,7 +81,9 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.12.0'
     implementation 'com.wefika:horizontal-picker:1.1.1'
     implementation 'liji.library.dev:citypickerview:0.7.0'
-
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation files('libs/IndoorscapeAlbumPlugin.jar')
 }
 repositories {
   flatDir {
