--- a/eastes_android-developer/yunqudao/app/src/main/AndroidManifest.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/AndroidManifest.xml
@@ -132,6 +132,8 @@
         </activity>
         <activity android:name=".ui.house.ProjectCityChooseActivity">
         </activity>
+        <activity android:name=".ui.house.ProjectDanYuanActivity"
+            android:theme="@style/dialogstyle"></activity>
 
 
         <!--客源模块-->
