--- a/eastes_android-developer/yunqudao/app/build.gradle
+++ b/eastes_android-developer/yunqudao/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/IndoorscapeAlbumPlugin.jar')
+    implementation 'com.github.chrisbanes:PhotoView:1.3.0'
 }
 repositories {
   flatDir {
